# object-manager

./: .gitignore  CMakeLists.txt  form.ui  readme.md
include/: frame.h  mainwindow.h
resources/: default_objects.json  resources.qrc
src/: frame.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
